--- a/indexx.html
+++ b/indexx.html
@@ -22,9 +22,9 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="Paginas/prueba.html">
+                <a class="nav-link active" aria-current="page" href="Paginas/prueba.html"> Contactanos  </a>
               <li class="nav-item">
-                <a class="nav-link" href="Paginas/quienesomos.html">Quienes somos</a>
+                <a class="nav-link" href="Paginas/quienesomos.html"> Quienes somos </a>
             </ul>
             <form class="d-flex">
               <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
@@ -53,9 +53,7 @@
           </div>
         </div>
       </div>
-
-
-
+ 
 
 </div>
     <h1 class="display-1">Psicostudios</h1>
