--- a/indexx.html
+++ b/indexx.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Psicostudios</title>
     <link rel="stylesheet" href="css/bootstrap.css">
-    <link rel="stylesheet" href="estilos123.css">
+    <link rel="stylesheet" href="Bootstrap_Local/estilos123.css">
 </head>
 <body>
 
