--- a/Paginas/quienesomos.html
+++ b/Paginas/quienesomos.html
@@ -11,28 +11,14 @@
     <link rel="stylesheet" href="estilos123.css">
 </head>
 <body>
+  <nav class="navbar navbar-light bg-light">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="prueba.html">Contactanos</a>
 
-    <nav class="navbar navbar-dark bg-primary">
+      <div class="container-fluid">
+    </div>
+  </nav>
 
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#">Psicostudios</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="Paginas/prueba.html"> Contactanos  </a>
-              <li class="nav-item">
-                <a class="nav-link" href="Paginas/quienesomos.html"> Quienes somos </a>
-            </ul>
-            <form class="d-flex">
-              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-success" type="submit">Search</button>
-            </form>
-          </div>
-        </div>
-      </nav>
 
       <figure class="text-center">
         <blockquote class="blockquote">
@@ -92,3 +78,4 @@
                 <label for="floatingTextarea2">Comments</label>
               </div>
   </div>
+  <script src="js/bootstrap.js"></script>
