--- a/Paginas/ejemplo.html
+++ b/Paginas/ejemplo.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="">
 
-<head id="arriba">
+<head>
 
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -105,10 +105,7 @@
   </form>
    
 
-
-  
 <footer class="border">Pie de pagina</footer>
-
 <script src="js/bootstrap.js"></script>
 </body>
 </html>
