--- a/Paginas/prueba.html
+++ b/Paginas/prueba.html
@@ -8,33 +8,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Psicostudios</title>
     <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="Bootstrap_Local/estilos123.css">
+   
 </head>
 <body>
 
-    <nav class="navbar navbar-dark bg-primary">
+  <nav class="navbar navbar-light bg-light">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="quienesomos.html">Contactanos</a>
+      <a class="nav-link active" aria-current="page" href="ejemplo.html"> Inicio  </a>
 
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#">Psicostudios</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="prueba.html" > Nosotros</a>
-              <li class="nav-item">
-                <a class="nav-link" href="Paginas/quienesomos.html"></a>
-            </ul>
-            <form class="d-flex">
-              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-success" type="submit">Search</button>
-            </form>
-          </div>
-        </div>
-      </nav>
+      <div class="container-fluid">
+    </div>
+  </nav>
+
+       
+
+  </div>
+    </div>
+  </nav>
 
 
 
+
+    
 
     <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
